style.css
/* ... */
@-webkit-keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
  40% {
    -webkit-transform: translateY(-10px);
    transform: translateY(-10px);
  }
  60% {
    -webkit-transform: translateY(-2px);
    transform: translateY(-2px);
  }
}
@keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
  40% {
    -moz-transform: translateY(-10px);
    -ms-transform: translateY(-10px);
    -webkit-transform: translateY(-10px);
    transform: translateY(-10px);
  }
  60% {
    -moz-transform: translateY(-2px);
    -ms-transform: translateY(-2px);
    -webkit-transform: translateY(-2px);
    transform: translateY(-2px);
  }
}

/*---------------------HIGHLIGHTS-----------------------*/

.highlight_wrapper{
    margin: 2em 0;
    background-color: rgb(40, 40, 45);
}

.highlight{
    padding: 19vh 2em 18.5vh;
    text-align: center;
    margin: 0 auto;
}

/*This helps visually match long quotes (h2) to short quote's font (h3)*/
.highlight h2{
    margin: 0 auto .3em;
    max-width: 35em;
    font-weight: 500;
}

.highlight h2 img{
    width: .9em;
    display: inline-block;
    margin: 0 5px 4px 0px;
    vertical-align: middle;
}

.highlight h3{
    margin: 0 auto .3em;
    max-width: 23em;
}

.highlight h4{margin-bottom: 1em}

.art_wrapper .highlight h4{color: #999999;}

.art_wrapper .highlight_wrapper{
    margin: 0;
    background-color: #F8F8F8;
}

.art_wrapper .highlight h3{
    color: #333333;
}

@media only screen and (max-width: 70em) {.highlight{padding: 15vh 2em 14.5vh;}}

/*----------HIGHLIGHT QUOTES---------*/

/*This is targeting the quote "buttons"*/
.ken_min h2, .ken_expand h2, .char_min h2, .char_expand h2{
    font-weight: 300;
    cursor: pointer;
    width: 8em;
}

.ken_long, .char_long{display: none;}

/*For Javascript actions*/
.quote_inactive{display: none;}
.quote_active{display: block;}


/*---------------------UX BANNERS-----------------------*/

.mobell_uxb_wrapper h4, .boltabout_uxb_wrapper h4, .cp_uxb_wrapper h4{
    color: #FFF
}

.mobell_uxb_wrapper button, .boltabout_uxb_wrapper button, .cp_uxb_wrapper button{
    cursor: not-allowed;
}

.mobell_uxb_wrapper{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: auto;
    margin: 23vh auto;
    max-width: 100em;
    max-height: 100em;
    column-gap: 5%;
}

.mobell_uxb_haze{
    align-self: center;
    grid-column: 1/3;
    grid-row: 1;
    width: 30em;
    height: 30em;
    background: radial-gradient(ellipse closest-side, rgb(248, 161, 0) 0%, rgba(248,181,0,0.10) 70%, rgba(248,181,0,0) 100%);
    transform: scale(2) translateX(2em);
    opacity: .5;
    transition: ease 1s;
}

.mobell_uxb_image{
    grid-row: 1;
    grid-column: 1/3;
    transform: scale(1.3);
    transform-origin: right;
    transition: ease 1s;
}

.mobell_uxb_text{
    grid-column: 3/5;
    grid-row: 1;
    margin-right: 4em;
    align-self: center;
    z-index: 1;
    max-width: 45em;
    transition: ease 1s;
}

.mobell_uxb_wrapper:hover .mobell_uxb_haze {
    transform: scale(2.7) translateX(2em);
}

.mobell_uxb_wrapper:hover .mobell_uxb_image {
    transform: scale(1.3) translateX(.3em);
}

.mobell_uxb_wrapper:hover .mobell_uxb_text {
    transform: translateX(-.3em);
}

@media only screen and (max-width: 70em) {
    
    .mobell_uxb_wrapper{
        margin: 30vh auto 20vh;
        column-gap: 5%;
    }
    
     .mobell_uxb_haze{
        grid-column: 1/2;
        width: 9em;
        height: 9em;
        transform: scale(4) translateX(-.5em);
        opacity: .3;
    }
    
    .mobell_uxb_image{
        grid-column: 1/2;
        transform: scale(2.7);
    }
    
    .mobell_uxb_text{
        grid-column: 2/5;
        margin: 0 7% 0 0;
        max-width: 40em;
    }

    .mobell_uxb_wrapper:hover .mobell_uxb_haze {
    transform: scale(4) translateX(-.5em);
}

    .mobell_uxb_wrapper:hover .mobell_uxb_image {
        transform: scale(2.7);
}

    .mobell_uxb_wrapper:hover .mobell_uxb_text {
        transform: translateX(0);
}
}

@media only screen and (max-width: 43em) {
    .mobell_uxb_wrapper{
        margin: 0 auto 10vh;
        grid-template-rows: 31em auto;
    }
    
    .mobell_uxb_haze{
        grid-column: 1/-1;
        transform: scale(1.5) translateX(-1em);
        width: auto;
        height: 25em;
        margin-bottom: -10em
    }

    .mobell_uxb_image{
        transform: scale(1.5) translateX(-1em);
        transform-origin: top;
        grid-column: 1/-1;
        width: auto;
        height: 60vh;
        min-height: 25em;
        margin: 5em auto -5em;
    }

    .mobell_uxb_text{
        padding: 3em 2em 0;
        grid-column: 1/-1;
        grid-row: 2;
        margin: 0;
        background: linear-gradient(0deg, rgba(33,32,36,1) 0%, rgba(33,32,36,1) 80%, rgba(33,32,36,.9) 90%, rgba(33,32,36,.6) 95%, rgba(33,32,36,0.3) 98%, rgba(33,32,36,0) 100%);
    }

    .mobell_uxb_wrapper:hover .mobell_uxb_haze {
        transform: scale(1.5) translateX(-1em);
    }
    
    .mobell_uxb_wrapper:hover .mobell_uxb_image {
        transform: scale(1.5) translateX(-1em);
    }

    .mobell_uxb_wrapper:hover .mobell_uxb_text {
        transform: translateX(0);
    }
}


/*--------------*/

.boltabout_uxb_wrapper{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: auto;
    margin: 25vh auto;
    max-width: 100em;
    max-height: 100em;
    column-gap: 3%
}

.boltabout_uxb_haze{
    align-self: center;
    grid-column: 4/5;
    grid-row: 1;
    width: 30em;
    height: 30em;
    background: radial-gradient(ellipse closest-side, rgba(17,172,243,1) 0%, rgba(17,172,243,0.10) 70%, rgba(17,172,243,0) 100%);
    transform: scale(1.8) translateX(-3em) translateY(-1em);
    opacity: .8;
    transition: ease 1s;
}
/* ... */

